breezy (3.0.0~bzr7204-1) UNRELEASED; urgency=medium

  * debian/control: Mention in long description that Breezy supports the
    Git and Bazaar file formats.
  * New upstream snapshot.
   + Drop patch 09_increase_time_window: applied upstream.
   + Drop patch 06_git_ignore: applied upstream.
   + Drop patch 07_empty_dir_changed: applied upstream.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 20 Nov 2018 23:52:40 +0000

breezy (3.0.0~bzr7199-2) unstable; urgency=medium

  * Set selftest timeout to 6000 seconds, to help with slow buildds.
  * Add patch 09_increase_time_window: allow more slack when comparing
    mtimes, for slow systems.
  * debian/control: Fix dependency on python-dulwich to use at least
    0.19.8.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 20 Nov 2018 17:36:21 +0000

breezy (3.0.0~bzr7199-1) unstable; urgency=medium

  * New upstream snapshot.
  * Add patch 04_remove_more_file_ids: fix some compatibility issues.
  * Add patch 06_git_ignore: fix 'brz ignore' in git repositories.
  * Bump python-gpg from suggests to recommends.
  * Add patch 07_empty_dir_changed: don't consider empty git directories
    when finding unknown files.
  * Add patch 08_disable_sphinx_epytext.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 20 Nov 2018 01:10:38 +0000

breezy (3.0.0~bzr7192-1) unstable; urgency=medium

  * New upstream snapshot.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 18 Nov 2018 02:58:16 +0000

breezy (3.0.0~bzr7190-1) unstable; urgency=medium

  * Bump minimum version of dulwich to 0.19.8.
  * Add note about python version to python{,3}-breezy.tests long
    description.
  * debian/copyright: Remove duplicate paragraph for tools/brz_access.
  * New upstream snapshot.
  * Drop patch 03_crc_asul and 15_git_feature: applied upstream.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 17 Nov 2018 19:39:10 +0000

breezy (3.0.0~bzr7183-1) unstable; urgency=medium

  * New upstream snapshot.
  * Add patch 03_crc_asul to fix test failures on 32-bit platforms.